--- a/client/index.html
+++ b/client/index.html
@@ -98,8 +98,8 @@
                 <div class="thumbnail">
                     <img src="/images/mafia.jpg" alt="">
                     <div class="caption">
-                        <h3>마피아(개발중)</h3>
-                        <p>수려한 픽셀아트와 함께 마피아 게임을 친구와 즐길수 있습니다!</p>
+                        <h3>마피아</h3>
+                        <p>웹으로 즐기는 마피아게임!</p>
                         <p>
                             <a  href="#" class="btn btn-primary gamemodal" data-id="mafia" data-toggle="modal" data-target="#link_menu_div">링크 생성</a><a href="#" class="btn btn-default">More Info</a>
                         </p>
