--- a/client/index.html
+++ b/client/index.html
@@ -111,10 +111,10 @@
                 <div class="thumbnail">
                     <img src="http://placehold.it/800x500" alt="">
                     <div class="caption">
-                        <h3>배틀 로얄(개발중)</h3>
-                        <p>턴 기반 MMO 생존게임을 설치 없이 즐길수 있습니다!</p>
+                        <h3>2048</h3>
+                        <p>웹 퍼즐 게임</p>
                         <p>
-                            <a href="#" class="btn btn-primary">링크 생성</a> <a href="#" class="btn btn-default">More Info</a>
+                            <a href="#" class="btn btn-primary gamemodal" data-id="2048" data-toggle="modal" data-target="#link_menu_div">링크 생성</a> <a href="#" class="btn btn-default">More Info</a>
                         </p>
                     </div>
                 </div>
