--- a/client/ranking_user.html
+++ b/client/ranking_user.html
@@ -75,7 +75,7 @@
                     <div class="page-heading">
                         <h1>Arachne Ranking</h1>
                         <hr class="small">
-                        <form class="searchInput" action="/rank/user/" accept-charset="utf-8" name="user" method="get">
+                        <form class="searchInput">
                             <input type="text" name="userName" class="Rankingbox" placeholder="Player Id">
                             <input type="button" class="Region" onclick="#" value="KR">
                             <button class="Rankingbutton">
