--- a/client/index.html
+++ b/client/index.html
@@ -107,14 +107,14 @@
                 </ol>
                 <div class="carousel-inner DivGameImage">
                     <div class="item active">
-                        <img src="/img/mafia.jpg" alt="First slide">
+                        <img src="/img/mafia.jpg" alt="First slide" style="height: 100%; max-height: 760px; vertical-align: middle">
                         <div class="carousel-caption">
                             <h3>Mafia</h3>
                             <p>친구들과 즐길 수 있는 멀티게임</p>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/img/catchmind.jpg" alt="Second slide">
+                        <img src="/img/catchmind.jpg" alt="Second slide" style="height: 100%; max-height: 760px; vertical-align: middle">
                         <div class="carousel-caption">
                             <h3>Catch Mind</h3>
                             <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div">링크 생성</a> <a href="#" class="btn btn-default">More Info</a>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/img/2048a.jpg" alt="Third slide">
+                        <img src="/img/2048a.jpg" alt="Third slide" style="height: 100%; max-height: 760px; vertical-align: middle">
                         <div class="carousel-caption">
                             <h3>2048</h3>
                             <p>친구들과 점수 경쟁을 통해 캐쥬얼 게임을 즐겨요</p>
