--- a/client/orderlist.html
+++ b/client/orderlist.html
@@ -61,7 +61,7 @@
                 <a href="#">
                     <img class="img-responsive image_750x450" src="img/2048b.png">
                 </a>
-                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div">링크 생성</a> <a href="#" class="btn btn-default">More Info</a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="2048" data-toggle="modal" data-target="#link_menu_div">링크 생성</a> <a href="#" class="btn btn-default">More Info</a>
             </div>
             <div class="col-md-3 portfolio-item">
                 <a href="#">
