--- a/client/mafia_sum.html
+++ b/client/mafia_sum.html
@@ -43,15 +43,15 @@
                 <p>친구들과 함께 즐기는 마피아 게임. 최소 인원이 8명이 되어야지 할 수 있지만 단체 카톡방을 이용해서 게임을 즐기면 쉽게 모이지 않을까요?
                 친구들중에 거짓말쟁이가 누구인지 알 수 있는 시간</p>
 
-                <p style="vertical-align: text-bottom; font-weight: bold;">
+                <p style="vertical-align: text-bottom; font-weight: bold; text-align: center;">
                 Game Type: Multiplayer room game<br>
                 Minimum player: 8 people<br>
                 Release date: Dec/1/2016<br>
                 Game version: 0.0.9v<br> 
                 </p>
 
-                <p>사용자 평가: 긍정적</p>
-                <a class="btn btn-primary btn-lg" href="#" >Link Create</a>
+                <p style="text-align: center;">사용자 평가: 긍정적</p>
+                <a class="btn btn-primary btn-lg" href="#" style="display: table; margin-left: auto; margin-right: auto;"">Link Create</a>
             </div>
             <!-- /.col-md-4 -->
         </div>
@@ -73,7 +73,7 @@
         <!-- /.row -->
 
         <!-- Content Row -->
-        <div class="row">
+        <div class="row" style="display: table; margin-left: auto; margin-right: auto;"">
             <div class="col-md-4 image_sum">
                 <h4>Screen Shot</h4>
                 <img src="img/game.png" style="width: 100%; max-width: 760px; vertical-align: middle">
