--- a/client/orderlist.html
+++ b/client/orderlist.html
@@ -44,30 +44,30 @@
 
         <!-- Projects Row -->
         <div class="row">
-            <div class="col-md-3 portfolio-item">
-                <a href="#">
+            <div class="col-md-3 portfolio-item" style="margin-bottom: 8px;">
+                <a href="mafia_sum.html">
                     <img class="img-responsive image_750x450" src="img/mafia.jpg">
 
                 </a>
-                <a  href="#" class="btn btn-primary gamemodal" data-id="mafia" data-toggle="modal" data-target="#link_menu_div">링크 생성</a> <a href="#" class="btn btn-default">More Info</a>
+                <a href="#" class="btn btn-primary gamemodal" data-id="mafia" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
             </div>
             <div class="col-md-3 portfolio-item">
                 <a href="#">
                     <img class="img-responsive image_750x450" src="img/catchmind.jpg">
                 </a>
-                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div">링크 생성</a> <a href="#" class="btn btn-default">More Info</a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
             </div>
             <div class="col-md-3 portfolio-item">
                 <a href="#">
                     <img class="img-responsive image_750x450" src="img/2048b.png">
                 </a>
-                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div">링크 생성</a> <a href="#" class="btn btn-default">More Info</a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
             </div>
             <div class="col-md-3 portfolio-item">
                 <a href="#">
                     <img class="img-responsive image_750x450" src="img/game.png">
                 </a>
-                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div">링크 생성</a> <a href="#" class="btn btn-default">More Info</a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
 
             </div>
         </div>
@@ -77,23 +77,29 @@
         <div class="row">
             <div class="col-md-3 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive image_750x450" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive image_750x450" src="img/mafia.jpg">
+
                 </a>
+                <a href="#" class="btn btn-primary gamemodal" data-id="mafia" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
             </div>
             <div class="col-md-3 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive image_750x450" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive image_750x450" src="img/catchmind.jpg">
                 </a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
             </div>
             <div class="col-md-3 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive image_750x450" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive image_750x450" src="img/2048b.png">
                 </a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
             </div>
             <div class="col-md-3 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive image_750x450" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive image_750x450" src="img/game.png">
                 </a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
+
             </div>
         </div>
         <!-- /.row -->
