game page extend

--- a/client/2048_sum.html
+++ b/client/2048_sum.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Mafia</title>
+    <title>2048 web</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -60,22 +60,22 @@
         <!-- Heading Row -->
         <div class="row">
             <div class="col-md-8">
-                <img class="img-responsive img-rounded" src="img/mafia.jpg" alt="">
+                <img class="img-responsive img-rounded" src="img/2048b.png" alt="" class="image_750x450">
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
-                <h1 style="text-align: center;">Web Mafia</h1>
-                <p>친구들과 함께 즐기는 마피아 게임. 최소 인원이 8명이 되어야지 할 수 있지만 단체 카톡방을 이용해서 게임을 즐기면 쉽게 모이지 않을까요?
-                친구들중에 거짓말쟁이가 누구인지 알 수 있는 시간</p>
+                <h1 style="text-align: center;">Web 2048</h1>
+                <p>모바일 게임에서 유명했던 2048게임 이제 친구들과 함께 즐길 시간입니다. 친구들보다 더 높은 점수를 얻어 자랑하세요. 원래 2048 게임은
+                 웹 게임이였습니다.</p>
 
                 <p style="vertical-align: text-bottom; font-weight: bold; text-align: center;">
-                Game Type: Multiplayer room game<br>
-                Minimum player: 8 people<br>
-                Release date: Dec/1/2016<br>
-                Game version: 0.0.9v<br> 
+                Game Type: Single Player Game<br>
+                Minimum player: 1 people<br>
+                Release date: Dec/7/2016<br>
+                Game version: 1.0.0v<br> 
                 </p>
 
-                <p style="text-align: center;">사용자 평가: 긍정적</p>
+                <p style="text-align: center;">사용자 평가: 매우 긍정적</p>
                 <a class="btn btn-primary btn-lg" href="#" style="display: table; margin-left: auto; margin-right: auto;"">Link Create</a>
             </div>
             <!-- /.col-md-4 -->
@@ -88,9 +88,9 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="well text-center">
-                    <p style="font-weight: bold">앞서 해보는 게임. 지금 바로 플레이 할 수 있습니다. 게임이 개발되는 과정에 참여하세요.</p>
-                    <p style="font-size: 8pt">알림: 앞서 해보는 게임은 완성된 게임이 아니며 개발이 진행됨에 따라 크게 바뀔 수 있습니다.<br>현재 상태에서 이 게임에 흥미가 생기지 않는다면, 개발이 더 진행될 때까지 기다려보는 것도 좋습니다.</p>
-                    <p style="font-style: bold;"><i>개발자의 한마디: 사람만 많다면 재밋습니다.</i></p>
+                    <p style="font-weight: bold">이미 완성된 게임</p>
+                    <p style="font-size: 8pt">알림: 기존에 있던 게임으로서 완성도 높은 게임 플레이를 즐길 수 있습니다.</p>
+                    <p style="font-style: bold;"><i>개발자의 한마디: 기존에 있던 오픈소스를 가져온 것으로 무단 침해 및 불법 사용 불가.</i></p>
                 </div>
             </div>
             <!-- /.col-lg-12 -->
@@ -101,19 +101,19 @@
         <div class="row" style="display: table; margin-left: auto; margin-right: auto;"">
             <div class="col-md-4 image_sum">
                 <h4>Screen Shot</h4>
-                <img src="img/game.png" style="width: 100%; max-width: 760px; vertical-align: middle">
+                <img src="img/2048f.jpeg" class="image_750x450">
                 <a class="btn btn-default" href="#" style="display: table; margin-left: auto; margin-right: auto;">More Info</a>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4 image_sum">
                 <h4>Ingame image 1</h4>
-                <img src="img/game.png" style="width: 100%; max-width: 760px; vertical-align: middle">
+                <img src="img/2048g.jpeg" class="image_750x450">
                 <a class="btn btn-default" href="#" style="display: table; margin-left: auto; margin-right: auto;">More Info</a>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4 image_sum">
                 <h4>Ingame image 2</h4>
-                <img src="img/game.png" style="width: 100%; max-width: 760px; vertical-align: middle">
+                <img src="img/2048h.png" class="image_750x450">
                 <a class="btn btn-default" href="#" style="display: table; margin-left: auto; margin-right: auto;">More Info</a>
             </div>
             <!-- /.col-md-4 -->
