--- a/client/catchmind_sum.html
+++ b/client/catchmind_sum.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Mafia</title>
+    <title>CatchMind</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -60,22 +60,22 @@
         <!-- Heading Row -->
         <div class="row">
             <div class="col-md-8">
-                <img class="img-responsive img-rounded" src="img/mafia.jpg" alt="">
+                <img class="img-responsive img-rounded" src="img/catchMind.jpg" alt="">
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
-                <h1 style="text-align: center;">Web Mafia</h1>
-                <p>친구들과 함께 즐기는 마피아 게임. 최소 인원이 8명이 되어야지 할 수 있지만 단체 카톡방을 이용해서 게임을 즐기면 쉽게 모이지 않을까요?
-                친구들중에 거짓말쟁이가 누구인지 알 수 있는 시간</p>
+                <h1 style="text-align: center;">Web CatchMind</h1>
+                <p>이제 캐치마인드를 메신저 채팅방에서 즐겨보세요. 무설치와 핸드폰 웹페이지에서 간단히 실행되는 캐치마인드는
+                주위 사람들과 심심할때마다 잠깐 잠깐 즐겁게 즐길 수 있습니다.</p>
 
                 <p style="vertical-align: text-bottom; font-weight: bold; text-align: center;">
                 Game Type: Multiplayer room game<br>
-                Minimum player: 8 people<br>
-                Release date: Dec/1/2016<br>
-                Game version: 0.0.9v<br> 
+                Minimum player: 2 people<br>
+                Release date: Nov/1/2016<br>
+                Game version: 0.0.5v<br> 
                 </p>
 
-                <p style="text-align: center;">사용자 평가: 긍정적</p>
+                <p style="text-align: center;">사용자 평가: 보통</p>
                 <a class="btn btn-primary btn-lg" href="#" style="display: table; margin-left: auto; margin-right: auto;"">Link Create</a>
             </div>
             <!-- /.col-md-4 -->
@@ -90,7 +90,7 @@
                 <div class="well text-center">
                     <p style="font-weight: bold">앞서 해보는 게임. 지금 바로 플레이 할 수 있습니다. 게임이 개발되는 과정에 참여하세요.</p>
                     <p style="font-size: 8pt">알림: 앞서 해보는 게임은 완성된 게임이 아니며 개발이 진행됨에 따라 크게 바뀔 수 있습니다.<br>현재 상태에서 이 게임에 흥미가 생기지 않는다면, 개발이 더 진행될 때까지 기다려보는 것도 좋습니다.</p>
-                    <p style="font-style: bold;"><i>개발자의 한마디: 사람만 많다면 재밋습니다.</i></p>
+                    <p style="font-style: bold;"><i>개발자의 한마디: 그래픽만 수정된다면 괜찮을 게임이라고 예상됨.</i></p>
                 </div>
             </div>
             <!-- /.col-lg-12 -->
