--- a/client/orderlist.html
+++ b/client/orderlist.html
@@ -47,31 +47,26 @@
             <div class="col-md-3 portfolio-item" style="margin-bottom: 8px;">
                 <a href="mafia_sum.html">
                     <img class="img-responsive image_750x450" src="img/mafia.jpg">
-
                 </a>
-                <a href="#" class="btn btn-primary gamemodal" data-id="mafia" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
+                <a href="#" class="btn btn-primary gamemodal" data-id="mafia" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
             </div>
             <div class="col-md-3 portfolio-item">
-                <a href="#">
+                <a href="catchmind_sum.html">
                     <img class="img-responsive image_750x450" src="img/catchmind.jpg">
                 </a>
-                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
+                <a  href="2048_sum.html" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
             </div>
             <div class="col-md-3 portfolio-item">
-                <a href="#">
+                <a href="2048_sum.html">
                     <img class="img-responsive image_750x450" src="img/2048b.png">
                 </a>
-<<<<<<< HEAD
-                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
-=======
-                <a  href="#" class="btn btn-primary gamemodal" data-id="2048" data-toggle="modal" data-target="#link_menu_div">링크 생성</a> <a href="#" class="btn btn-default">More Info</a>
->>>>>>> 3e85aae9c5eddf72090c3feded567b7e40b8df1e
+                <a  href="#" class="btn btn-primary gamemodal" data-id="2048" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
             </div>
             <div class="col-md-3 portfolio-item">
                 <a href="#">
                     <img class="img-responsive image_750x450" src="img/game.png">
                 </a>
-                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
 
             </div>
         </div>
@@ -84,25 +79,25 @@
                     <img class="img-responsive image_750x450" src="img/mafia.jpg">
 
                 </a>
-                <a href="#" class="btn btn-primary gamemodal" data-id="mafia" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
+                <a href="#" class="btn btn-primary gamemodal" data-id="mafia" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
             </div>
             <div class="col-md-3 portfolio-item">
                 <a href="#">
                     <img class="img-responsive image_750x450" src="img/catchmind.jpg">
                 </a>
-                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
             </div>
             <div class="col-md-3 portfolio-item">
                 <a href="#">
                     <img class="img-responsive image_750x450" src="img/2048b.png">
                 </a>
-                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="2048" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
             </div>
             <div class="col-md-3 portfolio-item">
                 <a href="#">
                     <img class="img-responsive image_750x450" src="img/game.png">
                 </a>
-                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto;">링크 생성</a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
 
             </div>
         </div>
