--- a/client/index.html
+++ b/client/index.html
@@ -85,7 +85,114 @@
         </div>
     </header>
 
-    <div class="order-list"></div>
+    <!-- Page Content -->
+    <div class="container">
+
+        <!-- Page Heading -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Hottest Game
+                    <small>Arachne recommend Game</small>
+                </h1>
+            </div>
+        </div>
+        <!-- /.row -->
+
+                <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-3 portfolio-item" style="margin-bottom: 8px;">
+                <a href="mafia_sum.html">
+                    <img class="img-responsive image_750x450" src="img/mafia.jpg">
+                </a>
+                <a href="#" class="btn btn-primary gamemodal" data-id="mafia" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="catchmind_sum.html">
+                    <img class="img-responsive image_750x450" src="img/catchmind.jpg">
+                </a>
+                <a  href="2048_sum.html" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="2048_sum.html">
+                    <img class="img-responsive image_750x450" src="img/2048b.png">
+                </a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="2048" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive image_750x450" src="img/game.png">
+                </a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
+
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive image_750x450" src="img/mafia.jpg">
+
+                </a>
+                <a href="#" class="btn btn-primary gamemodal" data-id="mafia" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive image_750x450" src="img/catchmind.jpg">
+                </a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive image_750x450" src="img/2048b.png">
+                </a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="2048" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
+            </div>
+            <div class="col-md-3 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive image_750x450" src="img/game.png">
+                </a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
+
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Pagination -->
+        <div class="row text-center">
+            <div class="col-lg-12">
+                <ul class="pagination">
+                    <li>
+                        <a href="#">&laquo;</a>
+                    </li>
+                    <li class="active">
+                        <a href="#">1</a>
+                    </li>
+                    <li>
+                        <a href="#">2</a>
+                    </li>
+                    <li>
+                        <a href="#">3</a>
+                    </li>
+                    <li>
+                        <a href="#">4</a>
+                    </li>
+                    <li>
+                        <a href="#">5</a>
+                    </li>
+                    <li>
+                        <a href="#">&raquo;</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- /.row -->
+
+    </div>
+    <!-- /.container -->
 
 
 
@@ -211,22 +318,6 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <script type="text/javascript">
-        $('.order-list').load("./orderlist.html .container", function(){
-                $.getScript('dist/main.bundle.js', function(){
-
-                }) ; 
-            }
-
-            
-        );
-
-        $('.modal-page').load("./port.html #portfolioModal1", function(){
-
-        })
-
-    </script>
 
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
