--- a/client/index.html
+++ b/client/index.html
@@ -120,9 +120,9 @@
             </div>
             <div class="col-md-3 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive image_750x450" src="img/game.png">
+                    <img class="img-responsive image_750x450" src="images/Hextris.jpg">
                 </a>
-                <a  href="#" class="btn btn-primary gamemodal" data-id="catchmind" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
+                <a  href="#" class="btn btn-primary gamemodal" data-id="Hextris" data-toggle="modal" data-target="#link_menu_div" style="display: table; margin-left: auto; margin-right: auto; margin-bottom: 8px;">링크 생성</a>
 
             </div>
         </div>
